Header zu allen Seiten hinzugefügt und neue images, sowie verschiedene Blogbeiträge angelegt.

--- a/Essen_Blog-Seite.html
+++ b/Essen_Blog-Seite.html
@@ -6,6 +6,29 @@
     <title>Essen</title>
 </head>
 <body>
-    
+    <!--- Header -->
+    <header>
+        <h1>Essen</h1>
+    </header>
+
+    <!--- Blog -->
+    <section>
+        <img src="/Assets/Kalte_Nudeln.jpeg" alt="Kalte Nudeln">
+        <h2>Kalte Nudeln</h2>
+        <p>Man findet sie fast überall in der warmen Jahreszeit und das hat auch seinen Grund. Meist handgemachte Weizennudeln mit rohem Gemüse und dazu ein säuerlich scharfes und ziemlich knoblauchlastiges Dressing.</p>
+    </section>
+
+    <section>
+        <img src="/Assets/Korean-BBQ.jpeg" alt="Koreanisches BBQ">
+        <h2>Koreanisches BBQ</h2>
+        <p>Fleisch, Gemüse und jede menge anderer Sites erwartet einen bei einem Koreanischen BBQ. Es wird direkt auf dem Tisch gegrillt, damit jeder es so zubereiten kann, wie man es am liebsten hat. Aber Achtung: es wird heiß und dementsprechend wächst der Durst.</p>
+    </section>
+
+    <!--- Footer -->
+    <footer>
+        <p> <a href="/Kontakt.html">Impressum</a> </p>
+        <p> <a href="/Kontakt.html">Kontakt</a> </p>
+    </footer> 
+
 </body>
 </html>
