--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
+    <title>Inspiration</title>
 </head>
 <body>
         
     <!--- Header -->
     <header>
-        <h1>Kontakt</h1>
+        <h1>Inspiration</h1>
     </header>
 
 
