--- a/Reisen_Blog-Seite.html
+++ b/Reisen_Blog-Seite.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     
+    <!--- Header -->
+    <header>
+        <h1>Reisen</h1>
+    </header>
+
+    <!--- Blog -->
+
 </body>
 </html>
