--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <section>
   <img src="/Assets/Reisen.jpeg" alt="Reisen">
   <h2>Die schönsten Ecken in China und das Beste drumherum</h2>
-  <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß - sehr groß. Die verschiedenen Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden in Japan, Vietnam, Kora, und und und...</p>
+  <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß - sehr groß. Die verschiedenen Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden in Japan, Vietnam, Korea, und und und...</p>
   <button type="button">Alle Resieziele</button>
 </section>
 
