Bloginhalte ergänzt, alle Bilder angelegt und Inspirationsseite mit Inhalten gefüllt

--- a/Essen_Blog-Seite.html
+++ b/Essen_Blog-Seite.html
@@ -21,7 +21,19 @@
     <section>
         <img src="/Assets/Korean-BBQ.jpeg" alt="Koreanisches BBQ">
         <h2>Koreanisches BBQ</h2>
-        <p>Fleisch, Gemüse und jede menge anderer Sites erwartet einen bei einem Koreanischen BBQ. Es wird direkt auf dem Tisch gegrillt, damit jeder es so zubereiten kann, wie man es am liebsten hat. Aber Achtung: es wird heiß und dementsprechend wächst der Durst.</p>
+        <p>In ganz China beliebt und deshalb überall zu finden ist das koreanische BBQ. Fleisch, Gemüse und jede menge anderer Sites erwartet einen. Es wird direkt auf dem Tisch gegrillt, damit jeder es so zubereiten kann, wie man es am liebsten hat. Aber Achtung: es wird heiß und dementsprechend wächst der Durst.</p>
+    </section>
+
+    <section>
+        <img src="/Assets/Nudelsuppe.jpeg" alt="Nudelsuppe">
+        <h2>Nudelsuppe</h2>
+        <p>Im Süden Chinas in Lijiang ähnelt die Küche sehr stark der Vietnamesischen. Auf Food Markets wird einem die Suppe mit Resinudeln angerichtet und man wählt selbst, was man gerne dazu möchte. Koriander, Lachs, Eier, Tofu, verschiedene Salate und vor allem unterschiedliche scharfe Pasten/Gewürze.</p>
+    </section>
+
+    <section>
+        <img src="/Assets/Changsha.jpeg" alt="Fleischtöpfe">
+        <h2>Fleischtöpfe</h2>
+        <p>In Changsha, Provinz Hunan wir ebenfalls sehr scharf gegessen. Für Gäste wird oft ein Topf mit Hackfleisch und Lauch bereitet, der dann mit Reis gegessen wird.</p>
     </section>
 
     <!--- Footer -->
