--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -12,6 +12,34 @@
         <h1>Inspiration</h1>
     </header>
 
+    <!--- Grid mit Fotos -->
+    <img src="/Assets/Taipeh.jpeg" alt="Taipeh" style="width:100%">
+    <img src="/Assets/Bangkok.jpeg" alt="Bangkok" style="width:100%">
+    <img src="/Assets/Philipinen.jpeg" alt="Philipinen" style="width:100%">
+    <img src="/Assets/Korean-BBQ.jpeg" alt="Koreanisches BBQ" style="width:100%">
+    <img src="/Assets/Nudelsuppe.jpeg" alt="Nudelsuppe" style="width:100%">
+    <img src="/Assets/Changsha.jpeg" alt="Fleischtöpfe" style="width:100%">
+
+    <img src="/Assets/Sushi-Frühstück.jpeg" alt="Sushi-Frühstück" style="width:100%">
+    <img src="/Assets/Shanghai-BBQ.jpeg" alt="Shanghai-BBQ" style="width:100%">
+    <img src="/Assets/Bali-Pool.jpeg" alt="Bali-Pool" style="width:100%">
+    <img src="/Assets/Fisch.jpeg" alt="Fisch-Sushi" style="width:100%">
+    <img src="/Assets/Korean-Streetfood.jpeg" alt="Koreanisches Streetfood" style="width:100%">
+    <img src="/Assets/Wan-Tan-Suppe.jpeg" alt="Wan-Tan-Suppe" style="width:100%">
+
+    <img src="/Assets/Fleischverkauf.jpeg" alt="Fleischverkauf" style="width:100%">
+    <img src="/Assets/Tokio-Kultur.jpeg" alt="Tokio-Kultur" style="width:100%">
+    <img src="/Assets/Bangkok-Blumenmarkt.jpeg" alt="Blumenmarkt in Bangkok" style="width:100%">
+    <img src="/Assets/Shanghai_Skyline.jpeg" alt="Shanghai Skyline" style="width:100%">
+    <img src="/Assets/Kalte_Nudeln.jpeg" alt="Kalte Nudeln" style="width:100%">
+    <img src="/Assets/Syndey_Hafen.jpeg" alt="Syndey_Hafen" style="width:100%">
+
+    <img src="/Assets/Suzhou_Mall.jpeg" alt="Suzhou_Mall" style="width:100%">
+    <img src="/Assets/Teeanbau.jpeg" alt="Teeanbau" style="width:100%">
+    <img src="/Assets/Hainan_Beach.jpeg" alt="Hainan_Beach" style="width:100%">
+    <img src="/Assets/Scharfe-Nudeln.jpeg" alt="Scharfe-Nudeln" style="width:100%">
+    <img src="/Assets/Tokio.jpeg" alt="Tokio" style="width:100%">
+    <img src="/Assets/Nachtisch.jpeg" alt="Nachtisch" style="width:100%">
 
 </body>
 </html>
