--- a/Reisen_Blog-Seite.html
+++ b/Reisen_Blog-Seite.html
@@ -6,13 +6,34 @@
     <title>Reisen</title>
 </head>
 <body>
-    
-    <!--- Header -->
-    <header>
-        <h1>Reisen</h1>
-    </header>
+        <!--- Header -->
+        <header>
+            <h1>Reisen</h1>
+        </header>
 
-    <!--- Blog -->
+        <!--- Blog -->
+        <section>
+            <img src="/Assets/Philipinen.jpeg" alt="Philipinen">
+            <h2>In 3 1/2 Stundne nach Manila</h2>
+            <p>Von Shanghai geht es in weniger als 4 Stunden auf die Philipinen. VOn Manila aus erreicht man fast alle gegenden auf der Hauptinsel mit dem Taxi. Was einen erwartet sind unglaublich nette Menschen und traumhafte Strände.</p>
+        </section>
 
+        <section>
+            <img src="/Assets/Taipeh.jpeg" alt="Taipeh">
+            <h2>Taiwan ist ein muss</h2>
+            <p>Hitze, hohe Luftfeuchtigkeit, ein vibrierendes Nachtleben, Streetfood, Kultur im Überfluss und eine herrliche Natur zum wandern und baden gehen. Taiwan bietet alles auf kleinstem Raum.</p>
+        </section>
+
+        <section>
+            <img src="/Assets/Tokio.jpeg" alt="Tokio">
+            <h2>Das Wochenede in Tokio</h2>
+            <p> Bie einer Flugzeit von unter 3 Stunden läd Tokio zu einem Wochenendtrip ein. Wer jetzt aber denkt, damit hätte er Tokio von der Bucketlist gestrichen, fehlt weit. Auch ein zweite, dritte und viertes Wochenende kommen einem nicht genug vor.</p>
+        </section>
+
+        <section>
+            <img src="/Assets/Bangkok.jpeg" alt="Bangkok">
+            <h2>Eine Reise nach Thailand beginnt mit Bangkok</h2>
+            <p> Zumindest sollte sie das meiner Meinung nach. Die Stadt bietet alles im Überfluss und ist er der perfekte Kontrast, um sich danach der Ruhe und Abgeschiedenheit an einem der vielen Strände zu entschleunigen.</p>
+        </section>
 </body>
 </html>
