Image-Beschreibungen für Barrierefreiheit und Kontaktformular angelegt. Head-Navigation zugefügt.

--- a/Essen_Blog-Seite.html
+++ b/Essen_Blog-Seite.html
@@ -4,34 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Essen</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <!--- Header -->
     <header>
+        <nav>
+            <a href="index.html">
+            <!-- Not final Logo -->
+            <img
+                src="/Assets/Me.jpeg"
+                alt="Ein Avatar-Bild von Patrick" title="Ein Avatar-Bild von Patrick"
+                width="100"
+            />
+            </a>
+            <a href="/Essen_Blog-Seite.html">Essen</a>
+            <a href="/Reisen_Blog-Seite.html">Reisen</a>
+            <a href="/Inspiration_Galerie.html">Inspiration</a>
+            <a href="Kontakt.html">Kontakt</a>
+        </nav>
         <h1>Essen</h1>
     </header>
 
     <!--- Blog -->
     <section>
-        <img src="/Assets/Kalte_Nudeln.jpeg" alt="Kalte Nudeln">
+        <img src="/Assets/Kalte_Nudeln.jpeg" alt="Holzschale mit hellen breiten Nudeln, die mit verschiedenem Gemüse und Tofu gemischt sind" title="Holzschale mit hellen breiten Nudeln, die mit verschiedenem Gemüse und Tofu gemischt sind">
         <h2>Kalte Nudeln</h2>
         <p>Man findet sie fast überall in der warmen Jahreszeit und das hat auch seinen Grund. Meist handgemachte Weizennudeln mit rohem Gemüse und dazu ein säuerlich scharfes und ziemlich knoblauchlastiges Dressing.</p>
     </section>
 
     <section>
-        <img src="/Assets/Korean-BBQ.jpeg" alt="Koreanisches BBQ">
+        <img src="/Assets/Korean-BBQ.jpeg" alt="Draufsicht auf einen großen Holztisch mit einem eingelassenem Tischgrill, auf dem Gemüse und Fleisch gegrillt wird. Daneben stehen mehrere Teller mit unterschiedlichen Lebensmitteln." title="Draufsicht auf einen großen Holztisch mit einem eingelassenem Tischgrill, auf dem Gemüse und Fleisch gegrillt wird. Daneben stehen mehrere Teller mit unterschiedlichen Lebensmitteln.">
         <h2>Koreanisches BBQ</h2>
         <p>In ganz China beliebt und deshalb überall zu finden ist das koreanische BBQ. Fleisch, Gemüse und jede menge anderer Sites erwartet einen. Es wird direkt auf dem Tisch gegrillt, damit jeder es so zubereiten kann, wie man es am liebsten hat. Aber Achtung: es wird heiß und dementsprechend wächst der Durst.</p>
     </section>
 
     <section>
-        <img src="/Assets/Nudelsuppe.jpeg" alt="Nudelsuppe">
+        <img src="/Assets/Nudelsuppe.jpeg" alt="Ein kleiner Tisch auf dem eine aus Holz gefertigte Brücke steht, die zum Servieren verschiedener Lebensmitteln verwendet wird. Daneben steht eine große schwarze Suppenschüssle mit einer hellen Brühe." title="Ein kleiner Tisch auf dem eine aus Holz gefertigte Brücke steht, die zum Servieren verschiedener Lebensmitteln verwendet wird. Daneben steht eine große schwarze Suppenschüssle mit einer hellen Brühe.">
         <h2>Nudelsuppe</h2>
         <p>Im Süden Chinas in Lijiang ähnelt die Küche sehr stark der Vietnamesischen. Auf Food Markets wird einem die Suppe mit Resinudeln angerichtet und man wählt selbst, was man gerne dazu möchte. Koriander, Lachs, Eier, Tofu, verschiedene Salate und vor allem unterschiedliche scharfe Pasten/Gewürze.</p>
     </section>
 
     <section>
-        <img src="/Assets/Changsha.jpeg" alt="Fleischtöpfe">
+        <img src="/Assets/Changsha.jpeg" alt="Auf einer weißen Tischplatte stehen 4 große weiße Schüsseln gefüllt mit 4 verschiedenen chinesischen Fleisch und Gemüse Gerichten." title="Auf einer weißen Tischplatte stehen 4 große weiße Schüsseln gefüllt mit 4 verschiedenen chinesischen Fleisch und Gemüse Gerichten.">
         <h2>Fleischtöpfe</h2>
         <p>In Changsha, Provinz Hunan wir ebenfalls sehr scharf gegessen. Für Gäste wird oft ein Topf mit Hackfleisch und Lauch bereitet, der dann mit Reis gegessen wird.</p>
     </section>
@@ -40,7 +56,7 @@
     <footer>
         <p> <a href="/Kontakt.html">Impressum</a> </p>
         <p> <a href="/Kontakt.html">Kontakt</a> </p>
-    </footer> 
+    </footer>
 
 </body>
 </html>
