--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -4,42 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspiration</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
         
     <!--- Header -->
     <header>
+        <nav>
+            <a href="index.html">
+            <!-- Not final Logo -->
+            <img
+                src="/Assets/Me.jpeg"
+                alt="Ein Avatar-Bild von Patrick" title="Ein Avatar-Bild von Patrick"
+                width="100"
+            />
+            </a>
+            <a href="/Essen_Blog-Seite.html">Essen</a>
+            <a href="/Reisen_Blog-Seite.html">Reisen</a>
+            <a href="/Inspiration_Galerie.html">Inspiration</a>
+            <a href="Kontakt.html">Kontakt</a>
+        </nav>
         <h1>Inspiration</h1>
     </header>
 
     <!--- Grid mit Fotos -->
-    <img src="/Assets/Taipeh.jpeg" alt="Taipeh" style="width:100%">
-    <img src="/Assets/Bangkok.jpeg" alt="Bangkok" style="width:100%">
-    <img src="/Assets/Philipinen.jpeg" alt="Philipinen" style="width:100%">
-    <img src="/Assets/Korean-BBQ.jpeg" alt="Koreanisches BBQ" style="width:100%">
-    <img src="/Assets/Nudelsuppe.jpeg" alt="Nudelsuppe" style="width:100%">
-    <img src="/Assets/Changsha.jpeg" alt="Fleischtöpfe" style="width:100%">
+    <img src="/Assets/Taipeh.jpeg" alt="Ein Blick von einer Aussichtsterasse auf die Stadt Taipeh. Dort sind Hochhäuser un dim Hintergrund Berge zu sehen." title="Ein Blick von einer Aussichtsterasse auf die Stadt Taipeh. Dort sind Hochhäuser un dim Hintergrund Berge zu sehen." style="width:100%">
+    <img src="/Assets/Bangkok.jpeg" alt="Ein Markt auf einer Einkaufsstrasse in Bangkok. Die Stände werden von bunten Sonnenschirmen überdacht und dutzende Menschen bewegen sich zwischen ihnen." title="Ein Markt auf einer Einkaufsstrasse in Bangkok. Die Stände werden von bunten Sonnenschirmen überdacht und dutzende Menschen bewegen sich zwischen ihnen." style="width:100%">
+    <img src="/Assets/Philipinen.jpeg" alt="Eine Strandaufnahme mit blauem Himmel und Wasser. Am Strand stehen zwei Bäume, welche Schatten auf zwei Sonnenliegen und eine runde Hängematte zwischen ihnen werfen." title="Eine Strandaufnahme mit blauem Himmel und Wasser. Am Strand stehen zwei Bäume, welche Schatten auf zwei Sonnenliegen und eine runde Hängematte zwischen ihnen werfen." style="width:100%">
+    <img src="/Assets/Korean-BBQ.jpeg" alt="Draufsicht auf einen großen Holztisch mit einem eingelassenem Tischgrill, auf dem Gemüse und Fleisch gegrillt wird. Daneben stehen mehrere Teller mit unterschiedlichen Lebensmitteln." title="Draufsicht auf einen großen Holztisch mit einem eingelassenem Tischgrill, auf dem Gemüse und Fleisch gegrillt wird. Daneben stehen mehrere Teller mit unterschiedlichen Lebensmitteln." style="width:100%">
+    <img src="/Assets/Nudelsuppe.jpeg" alt="Ein kleiner Tisch auf dem eine aus Holz gefertigte Brücke steht, die zum Servieren verschiedener Lebensmitteln verwendet wird. Daneben steht eine große schwarze Suppenschüssle mit einer hellen Brühe." title="Ein kleiner Tisch auf dem eine aus Holz gefertigte Brücke steht, die zum Servieren verschiedener Lebensmitteln verwendet wird. Daneben steht eine große schwarze Suppenschüssle mit einer hellen Brühe." style="width:100%">
+    <img src="/Assets/Changsha.jpeg" alt="Auf einer weißen Tischplatte stehen 4 große weiße Schüsseln gefüllt mit 4 verschiedenen chinesischen Fleisch und Gemüse Gerichten." title="Auf einer weißen Tischplatte stehen 4 große weiße Schüsseln gefüllt mit 4 verschiedenen chinesischen Fleisch und Gemüse Gerichten." style="width:100%">
 
-    <img src="/Assets/Sushi-Frühstück.jpeg" alt="Sushi-Frühstück" style="width:100%">
-    <img src="/Assets/Shanghai-BBQ.jpeg" alt="Shanghai-BBQ" style="width:100%">
-    <img src="/Assets/Bali-Pool.jpeg" alt="Bali-Pool" style="width:100%">
-    <img src="/Assets/Fisch.jpeg" alt="Fisch-Sushi" style="width:100%">
-    <img src="/Assets/Korean-Streetfood.jpeg" alt="Koreanisches Streetfood" style="width:100%">
-    <img src="/Assets/Wan-Tan-Suppe.jpeg" alt="Wan-Tan-Suppe" style="width:100%">
+    <img src="/Assets/Sushi-Frühstück.jpeg" alt="Blick von Oben auf einen Holztisch auf dem zwei Tassen grüner Tee, zwei kleine Schüsseln mit Sojasosse, ein Glas Bier, eine Schüssel mit Thunfischscheiben und ein Holzbret mit 12 verschiedenen Sushi-Variationen." title="Blick von Oben auf einen Holztisch auf dem zwei Tassen grüner Tee, zwei kleine Schüsseln mit Sojasosse, ein Glas Bier, eine Schüssel mit Thunfischscheiben und ein Holzbret mit 12 verschiedenen Sushi-Variationen." style="width:100%">
+    <img src="/Assets/Shanghai-BBQ.jpeg" alt="Auf einem aufrechtstehendem Holzstamm, der als Tisch dienst, steht ein Cocktailglas, eine Schüssel mit Kichererbsendipp und Brot und daneben eine Platte belegt mit gegrillten Fleischspiessen, Tomaten, Garnelen und Salatblättern." title="Auf einem aufrechtstehendem Holzstamm, der als Tisch dienst, steht ein Cocktailglas, eine Schüssel mit Kichererbsendipp und Brot und daneben eine Platte belegt mit gegrillten Fleischspiessen, Tomaten, Garnelen und Salatblättern." style="width:100%">
+    <img src="/Assets/Bali-Pool.jpeg" alt="Blick von einer Terrasse, auf der zwei Sonnenliegen neben einem Sonnenschirm stehen und ein kleiner Pool eingelassen ist, der Blick geht in einen grünen Wald unter einem blauen Himmel." title="Blick von einer Terrasse, auf der zwei Sonnenliegen neben einem Sonnenschirm stehen und ein kleiner Pool eingelassen ist, der Blick geht in einen grünen Wald unter einem blauen Himmel." style="width:100%">
+    <img src="/Assets/Fisch.jpeg" alt="Nahaufnaheme von 2 Gunkan-Makis auf einer Steinplatte. Die Makis sind mit kleinen weißen Fischen gefüllt, die über das Nori-Blatt hinausragen." title="Nahaufnaheme von 2 Gunkan-Makis auf einer Steinplatte. Die Makis sind mit kleinen weißen Fischen gefüllt, die über das Nori-Blatt hinausragen." style="width:100%">
+    <img src="/Assets/Korean-Streetfood.jpeg" alt="Im Vordergrund steht eine große Schüssel gefüllt mit rot-mariniertem Gemüse, dahinter eine Schüssel mit Makirollen und eine weitere mit Reisnudeln in einer cremig roten Umami-Sauce. Dahinter sitzt mehrere Gäste beim Essen, während hinter ihnen Passanten vorbeigehen." title="Im Vordergrund steht eine große Schüssel gefüllt mit rot-mariniertem Gemüse, dahinter eine Schüssel mit Makirollen und eine weitere mit Reisnudeln in einer cremig roten Umami-Sauce. Dahinter sitzt mehrere Gäste beim Essen, während hinter ihnen Passanten vorbeigehen." style="width:100%">
+    <img src="/Assets/Wan-Tan-Suppe.jpeg" alt="Eine Frau sitzt an einem Tisch und isst aus einer weß-blauen Schüssel Teigtaschen, die in einer Brühe schwimmen. Sie hält Essstäbchen in ihrer rechten und einen Löffel in ihrer linken Hand." style="width:100%">
 
-    <img src="/Assets/Fleischverkauf.jpeg" alt="Fleischverkauf" style="width:100%">
-    <img src="/Assets/Tokio-Kultur.jpeg" alt="Tokio-Kultur" style="width:100%">
-    <img src="/Assets/Bangkok-Blumenmarkt.jpeg" alt="Blumenmarkt in Bangkok" style="width:100%">
-    <img src="/Assets/Shanghai_Skyline.jpeg" alt="Shanghai Skyline" style="width:100%">
-    <img src="/Assets/Kalte_Nudeln.jpeg" alt="Kalte Nudeln" style="width:100%">
-    <img src="/Assets/Syndey_Hafen.jpeg" alt="Syndey_Hafen" style="width:100%">
+    <img src="/Assets/Fleischverkauf.jpeg" alt="Ein Straßenstand in einer Garage bietet verscheidenes Fleisch zum Kauf an. Es hängen Hühner und Würste von der Decke und auf dem Verkaufsttisch liegen große fettige Fleischstücke." title="Ein Straßenstand in einer Garage bietet verscheidenes Fleisch zum Kauf an. Es hängen Hühner und Würste von der Decke und auf dem Verkaufsttisch liegen große fettige Fleischstücke." style="width:100%">
+    <img src="/Assets/Tokio-Kultur.jpeg" alt="Traditionelle japansische Gebäude in Rot gestrichen umrunden einen großen Platz, auf dem Touristen umhergehen." title="Traditionelle japansische Gebäude in Rot gestrichen umrunden einen großen Platz, auf dem Touristen umhergehen." style="width:100%">
+    <img src="/Assets/Bangkok-Blumenmarkt.jpeg" alt="Innenansicht einer großen Markthalle, in der sich viele Menschen und dutzende Verkaufstische befinden." title="Innenansicht einer großen Markthalle, in der sich viele Menschen und dutzende Verkaufstische befinden." style="width:100%">
+    <img src="/Assets/Shanghai_Skyline.jpeg" alt="Blick von einem Hochhaus im Zentrum von Shanghai. Der Blick geht über 4 Hochhäuser hinweg und trifft auf den Oriental-Pearl-Tower, der einer langen Nadel gleicht, auf der zwei große purpurfarbenen Perlen stecken." title="Blick von einem Hochhaus im Zentrum von Shanghai. Der Blick geht über 4 Hochhäuser hinweg und trifft auf den Oriental-Pearl-Tower, der einer langen Nadel gleicht, auf der zwei große purpurfarbenen Perlen stecken." style="width:100%">
+    <img src="/Assets/Kalte_Nudeln.jpeg" alt="Holzschale mit hellen breiten Nudeln, die mit verschiedenem Gemüse und Tofu gemischt sind" title="Holzschale mit hellen breiten Nudeln, die mit verschiedenem Gemüse und Tofu gemischt sind" style="width:100%">
+    <img src="/Assets/Syndey_Hafen.jpeg" alt="Hafenansicht von Sydney in der Abenddämmerung. Verschiedenfarbige Lichter beleuchten den Steg und reflektieren sich im Wasse, auf dem zwei Tretboote fahren." title="Hafenansicht von Sydney in der Abenddämmerung. Verschiedenfarbige Lichter beleuchten den Steg und reflektieren sich im Wasse, auf dem zwei Tretboote fahren." style="width:100%">
 
-    <img src="/Assets/Suzhou_Mall.jpeg" alt="Suzhou_Mall" style="width:100%">
-    <img src="/Assets/Teeanbau.jpeg" alt="Teeanbau" style="width:100%">
-    <img src="/Assets/Hainan_Beach.jpeg" alt="Hainan_Beach" style="width:100%">
-    <img src="/Assets/Scharfe-Nudeln.jpeg" alt="Scharfe-Nudeln" style="width:100%">
-    <img src="/Assets/Tokio.jpeg" alt="Tokio" style="width:100%">
-    <img src="/Assets/Nachtisch.jpeg" alt="Nachtisch" style="width:100%">
+    <img src="/Assets/Suzhou_Mall.jpeg" alt="Ein Blick von einer Dachterrasse über eine großen leeren Platz, der in eine Straße übergeht, welche von hohen Häusern eingerahmt ist. In der Ferne geht die Sonne unter und taucht die Häuserschlucht in ein tiefes orangenes Licht." title="Ein Blick von einer Dachterrasse über eine großen leeren Platz, der in eine Straße übergeht, welche von hohen Häusern eingerahmt ist. In der Ferne geht die Sonne unter und taucht die Häuserschlucht in ein tiefes orangenes Licht." style="width:100%">
+    <img src="/Assets/Teeanbau.jpeg" alt="Landschaftsaufnahem über Teefelder auf einem Hügel. Die Sträücher sind kräftig Grün. Im Hintergrund sind bewaldete Hügel zu sehen." title="Landschaftsaufnahem über Teefelder auf einem Hügel. Die Sträücher sind kräftig Grün. Im Hintergrund sind bewaldete Hügel zu sehen." style="width:100%">
+    <img src="/Assets/Hainan_Beach.jpeg" alt="Standaufnahme auf der Insel Hainan. Ein langer leerer Strand, der am hellblauen Meer grenzt, in dem zwei Menschen baden. Im Hintergrund sind grüne Hügel, eine Felswand, bedeckt von einem blauen Himmel mit Wolken." title="Standaufnahme auf der Insel Hainan. Ein langer leerer Strand, der am hellblauen Meer grenzt, in dem zwei Menschen baden. Im Hintergrund sind grüne Hügel, eine Felswand, bedeckt von einem blauen Himmel mit Wolken." style="width:100%">
+    <img src="/Assets/Scharfe-Nudeln.jpeg" alt="Nahaufnahme einer braunen Nudelschüssel mit dicken Nudeln, Gemüse, Fleisch und einen roten Chillipaste." title="Nahaufnahme einer braunen Nudelschüssel mit dicken Nudeln, Gemüse, Fleisch und einen roten Chillipaste." style="width:100%">
+    <img src="/Assets/Tokio.jpeg" alt="Viele Menschen in einer Einkaufsstraße, eingerahmt von Häsern mit japanischen Schriftzeichen. In der Ferne ist der Fernsehturm von Tokio zu sehen." title="Viele Menschen in einer Einkaufsstraße, eingerahmt von Häsern mit japanischen Schriftzeichen. In der Ferne ist der Fernsehturm von Tokio zu sehen." style="width:100%">
+    <img src="/Assets/Nachtisch.jpeg" alt="Draufsicht auf einen Bartisch, auf dem zwei Teller nebeneinander stehen. Im linken liegt eine aufgebrochene Schokoladenkugel, die mit Vanilleeis gefüllt ist. Auf dem rechten Teller ist eine Kugel aus Apfelkuchen zu sehen, die auf einer Vanillesße schwimmt. dekoriert ist sie mit Apfelsticks und Pfirsichschnitzen." title="Draufsicht auf einen Bartisch, auf dem zwei Teller nebeneinander stehen. Im linken liegt eine aufgebrochene Schokoladenkugel, die mit Vanilleeis gefüllt ist. Auf dem rechten Teller ist eine Kugel aus Apfelkuchen zu sehen, die auf einer Vanillesße schwimmt. dekoriert ist sie mit Apfelsticks und Pfirsichschnitzen." style="width:100%">
+
+    <!--- Footer -->
+    <footer>
+        <p> <a href="/Kontakt.html">Impressum</a> </p>
+        <p> <a href="/Kontakt.html">Kontakt</a> </p>
+    </footer> 
 
 </body>
 </html>
