--- a/index.html
+++ b/index.html
@@ -8,42 +8,56 @@
 </head>
 <body>
 
-<!--- Header -->
-<header>
-  <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild-Startseite">
-  <h1>4 Years in China</h1>
-  <p>Die schönsten Reiseziele und das leckerste Essen</p>
-</header>
+  <!--- Header -->
+  <header>
+      <nav>
+         <a href="index.html">
+          <!-- Not final Logo -->
+          <img
+              src="/Assets/Me.jpeg"
+              alt="Ein Avatar-Bild von Patrick" title="Ein Avatar-Bild von Patrick"
+              width="100"
+          />
+          </a>
+          <a href="/Essen_Blog-Seite.html">Essen</a>
+          <a href="/Reisen_Blog-Seite.html">Reisen</a>
+          <a href="/Inspiration_Galerie.html">Inspiration</a>
+          <a href="Kontakt.html">Kontakt</a>
+      </nav>
+    <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild-Startseite">
+    <h1>4 Years in China</h1>
+    <p>Die schönsten Reiseziele und das leckerste Essen</p>
+  </header>
 
-<!--- Über mich -->
-<section>
-  <img src="/Assets/Me.jpeg" alt="Patrick">
-  <h2>Hi, ich bin Patrick</h2>
-  <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich Essen! Ich liebe es einfach in einem Land herumzureisen, neue Leute kennenzulernen und neue Gerichte zu probieren. Auf meienr Website zeige ich dir die schönsten Reiseziel und was du dort zu Essen finden kannst. Lass dich inspirieren!</p>
-  <button type="button">Kontakt</button>
-</section>
+  <!--- Über mich -->
+  <section>
+    <img src="/Assets/Me.jpeg" alt="Ein Avatar-Bild von Patrick" title="Ein Avatar-Bild von Patrick">
+    <h2>Hi, ich bin Patrick</h2>
+    <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich Essen! Ich liebe es einfach in einem Land herumzureisen, neue Leute kennenzulernen und neue Gerichte zu probieren. Auf meienr Website zeige ich dir die schönsten Reiseziel und was du dort zu Essen finden kannst. Lass dich inspirieren!</p>
+    <button type="button">Kontakt</button>
+  </section>
 
-<!--- Reisen -->
-<section>
-  <img src="/Assets/Reisen.jpeg" alt="Reisen">
-  <h2>Die schönsten Ecken in China und das Beste drumherum</h2>
-  <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß - sehr groß. Die verschiedenen Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden in Japan, Vietnam, Korea, und und und...</p>
-  <button type="button">Alle Resieziele</button>
-</section>
+  <!--- Reisen -->
+  <section>
+    <img src="/Assets/Reisen.jpeg" alt="Viele Menschen stehen dicht gedrängt in einer fahrenden Bahn. Nahezu alle starren auf ihr Handy" title="Viele Menschen stehen dicht gedrängt in einer fahrenden Bahn. Nahezu alle starren auf ihr Handy">
+    <h2>Die schönsten Ecken in China und das Beste drumherum</h2>
+    <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß - sehr groß. Die verschiedenen Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden in Japan, Vietnam, Korea, und und und...</p>
+    <button type="button">Alle Resieziele</button>
+  </section>
 
-<!--- Essen -->
-<section>
-  <img src="/Assets/Essen.jpeg" alt="Essen">
-  <h2>Essen macht glücklich</h2>
-  <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24 Stundne, 7 Tage die Woche, geliefert, oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz glücklich macht.</p>
-  <button type="button">Das beste Essen</button>
-</section>
+  <!--- Essen -->
+  <section>
+    <img src="/Assets/Essen.jpeg" alt="Auf einem großen runden Tisch mit einer weißen Tischdecke steht eine drehbare Glasplatte, auf der unterschiedlichste Gerichte serviert sind. Darunter ein gegrillter Fisch, eingelegtes Tofu, gebratenes Gemüse und eingelegter Lotus." title="Auf einem großen runden Tisch mit einer weißen Tischdecke steht eine drehbare Glasplatte, auf der unterschiedlichste Gerichte serviert sind. Darunter ein gegrillter Fisch, eingelegtes Tofu, gebratenes Gemüse, eingelegter Lotus und noch mehr.">
+    <h2>Essen macht glücklich</h2>
+    <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24 Stundne, 7 Tage die Woche, geliefert, oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz glücklich macht.</p>
+    <button type="button">Das beste Essen</button>
+  </section>
 
-<!--- Footer -->
-<footer>
-  <p> <a href="/Kontakt.html">Impressum</a> </p>
-  <p> <a href="/Kontakt.html">Kontakt</a> </p>
-</footer> 
+  <!--- Footer -->
+  <footer>
+    <p> <a href="/Kontakt.html">Impressum</a> </p>
+    <p> <a href="/Kontakt.html">Kontakt</a> </p>
+  </footer> 
 
 </body>
 </html>
